@@ -7,17 +7,6 @@
 
 include /usr/share/quilt/quilt.make
 
-CFLAGS = -g
-
-ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
-    CFLAGS += -O0
-else
-    CFLAGS += -O2
-endif
-ifeq (,$(findstring nostrip,$(DEB_BUILD_OPTIONS)))
-    INSTALL_PROGRAM += -s
-endif
-
 configure: configure-stamp
 configure-stamp: $(QUILT_STAMPFN)
 	dh_testdir
